# trajectory-eval-harness

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GUIDE.md  LICENSE  README.md  eval_set.jsonl  pyproject.toml  reliability.py  requirements.txt  scorers.py
.github/workflows/: ci.yml
agent/: README.md  client.py  graph.py  hitl.py  llm_tools.py  review.py  run.py  state.py  tools.py  trajectory_writer.py  types.py
data/: README.md  corpus.py  download_dataset.py  eval_set.jsonl  label_pairs.py  make_mentor_packet.py  profile_jd_domains.py  profile_jd_requirements.py  sample_reference_pairs.py  taxonomy.py  view_pair.py
data/reference/: labels-v1-mentor.jsonl  labels-v1.jsonl  sample-v1.json
docs/: collaboration-protocol.md  decisions.md  eval-design.md  handoff-trajectory-eval-harness.md  labeling-protocol.md  p1-design.md  roadmap.md  trajectory-schema.md
docs/findings/: 000-example.md  001-jd-corpus-is-cross-occupation-not-software.md  002-no-skill-musts-derived-rule.md  003-dataset-labels-diverge-from-rubric.md  004-gate-truth-imbalance.md  005-dimension-boundary-years.md  006-granularity-consistency.md  00x-draft-no-skill-musts.md  (+7 more)
eval/: README.md  rubric_loader.py  trajectory.py
examples/: README.md
rubrics/: README.md  rubric-v1.yaml
scripts/: run_agent.py
src/: config.py
tests/: test_compat_layer.py  test_dataset.py  test_gate_interactive.py  test_graph_skeleton.py  test_label_cockpit.py  test_llm_nodes.py  test_mcp_server.py  test_provider_isolation.py  test_repo_hygiene.py  test_rubric_schema.py  test_smoke.py  test_trajectory_schema.py
(+17 files in other folders)
