[project]
name = "trajectory-eval-harness"
version = "0.0.1"
description = "Evaluation framework for AI-agent reliability — trajectory-level scoring of intermediate agent behavior, demonstrated on a resume-JD matching agent with a human-in-the-loop gate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["\\.venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
